--- a/metrics/commits_Student.properties
+++ b/metrics/commits_Student.properties
@@ -3,7 +3,7 @@ index=$$github.index
 
 # metric props
 enabled=true
-name=Ar1e1 commits
+name=Students commits
 description=Percentage of commits made by a student with respect to the total number of commits in the project
 factors=commitscontribution
 weights=1.0
