--- a/metrics/modifiedlines_Student.properties
+++ b/metrics/modifiedlines_Student.properties
@@ -3,7 +3,7 @@ index=$$github.index
 
 # metric props
 enabled=true
-name=Ar1e1 modified lines
+name=Student modified lines
 description=Percentage of modified lines of code made by a student with respect to the total number of modified lines of code in the project
 factors=modifiedlinescontribution
 weights=1.0
@@ -20,3 +20,8 @@ onError=set0
 #possible related_events sent by LD_connect from GITHUB: push, issues       from TAIGA: issue, epic, task, userstory, relatedusertory
 relatedEvent=push
 scope=individual
+
+# We'll define a param for the student's username
+# placeholders get replaced at runtime:  $$studentUser
+# (pick any naming convention you like)
+param.studentUser=$$studentUser
