--- a/metrics/assignedtasks_Student.properties
+++ b/metrics/assignedtasks_Student.properties
@@ -3,7 +3,7 @@ index=$$taiga.task.index
 
 # metric props
 enabled=true
-name=Ari3l tasks
+name=Assigned student tasks
 description=Percentage of tasks made by a student with respect to the total number of tasks in the project
 factors=taskscontribution
 weights=1.0
