--- a/metrics/closedtasks_Student.properties
+++ b/metrics/closedtasks_Student.properties
@@ -3,7 +3,7 @@ index=$$taiga.task.index
 
 # metric props
 enabled=true
-name=Ari3l closed tasks
+name=Student closed tasks
 description=Percentage of closed tasks made by a student with respect to the total number of tasks assigned to student
 factors=fulfillmentoftasks
 weights=1.0
