Code Agnostic, sources, query parameters

--- a/metrics/deviation_effort_estimation_simple.properties
+++ b/metrics/deviation_effort_estimation_simple.properties
@@ -9,7 +9,7 @@ factors=deviationmetrics
 weights=1.0
 
 # query parameters
-param.threshold=25 # {{TRESHOLD}}WITH THIS IT DOESNT WORK, I NEED TO CHANGE IT SOMETHOW TO MAKE IT WORK
+param.threshold=25 
 
 # query results
 result.highDeviatedTasks=highDeviatedTasks
