--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ MONGO_AUTHSRC=admin
 # This is the URL of the GESSI dashboard API. 
 BASE_GESSI_URL =http://gessi-dashboard.essi.upc.edu:8888/api
 
-QUALITY_MODELS_DIR = "./QUALITY_MODELS"
+QUALITY_MODELS_DIR = ./QUALITY_MODELS
