--- a/QUALITY_MODELS/AWS/factors/commits_tasks_relation.properties
+++ b/QUALITY_MODELS/AWS/factors/commits_tasks_relation.properties
@@ -5,6 +5,7 @@ description=Percentage of commits with references to tasks with respect to the t
 
 
 metric=commits_taskreference
+indicators=information_completeness
 
 formula=average
 weights=no weighted
