--- a/QUALITY_MODELS/AMEP/factors/commits_tasks_relation.properties
+++ b/QUALITY_MODELS/AMEP/factors/commits_tasks_relation.properties
@@ -3,7 +3,9 @@
 name=Commits Tasks Relation
 description=Percentage of commits with references to tasks with respect to the total number of commits in the project, i.e. commits with the word "task #X" in them, where X is the task number in Taiga.
 
+
 metric=commits_taskreference
+indicators=information_completeness
 
 formula=average
 weights=no weighted
