--- a/QUALITY_MODELS/AWS/factors/deviation_metrics.properties
+++ b/QUALITY_MODELS/AWS/factors/deviation_metrics.properties
@@ -4,6 +4,7 @@ description=Groups the metrics that measure the standard deviation of different 
 
 #metric=task_sd, deviation_effort_estimation_simple, commits_sd
 metric=tasks_sd, deviation_effort_estimation_simple, commits_sd
+indicators=repository_contribution
 
 formula=average
 weights=no weighted
