--- a/QUALITY_MODELS/AWS/factors/fullfillment_of_tasks.properties
+++ b/QUALITY_MODELS/AWS/factors/fullfillment_of_tasks.properties
@@ -4,6 +4,9 @@ description=Groups the metrics that measure the percentage of closed tasks made 
 #metric=closed_tasks_student
 
 metric=closedtasks_Student
+indicators=backlog_management
+
+
 formula=average
 weights=no weighted
 
