--- a/QUALITY_MODELS/DEFAULT/factors/commits_contribution.properties
+++ b/QUALITY_MODELS/DEFAULT/factors/commits_contribution.properties
@@ -4,6 +4,7 @@ name=Commits Contribution
 description=Groups the metrics that measure the percentage of commits made by a student with respect to the total number of commits of the project. Note: Merge commits are not taken into account.
 
 metric=commits_Student
+indicators=repositorycontribution
 
 formula=average
 weights=no weighted
