--- a/QUALITY_MODELS/DEFAULT/factors/commits_management.properties
+++ b/QUALITY_MODELS/DEFAULT/factors/commits_management.properties
@@ -4,6 +4,7 @@ name=Commits Management
 description=Groups the metrics that measure the percentage of anonymous commits, i.e. commits from unknown users which dont match with any known contributor.
 
 metric=None
+indicators=repositorycontribution
 
 formula=average
 weights=no weighted
