--- a/QUALITY_MODELS/DEFAULT/factors/modified_lines_contribution.properties
+++ b/QUALITY_MODELS/DEFAULT/factors/modified_lines_contribution.properties
@@ -3,6 +3,7 @@ name=Modified Lines Contribution
 description=Groups the metrics that measure the percentage of modified lines of code made by a student with respect to the total number of modified lines of code in the project. Note: Both additions and deletions are considered as modified lines.
 
 metric=modifiedlines_Student
+indicators=repository_contribution
 
 formula=average
 weights=no weighted
