--- a/QUALITY_MODELS/AMEP/factors/fullfillment_of_tasks.properties
+++ b/QUALITY_MODELS/AMEP/factors/fullfillment_of_tasks.properties
@@ -3,7 +3,7 @@ description=Groups the metrics that measure the percentage of closed tasks made 
 
 #metric=closed_tasks_student
 
-metric=closedtasks_Student
+metric=closedtasks
 indicators=backlog_management
 
 
