--- a/QUALITY_MODELS/AMEP/metrics/assignedtasks.properties
+++ b/QUALITY_MODELS/AMEP/metrics/assignedtasks.properties
@@ -3,17 +3,17 @@ index=$$taiga.task.index
 
 # metric props
 enabled=true
-name=Student closed tasks
-description=Percentage of closed tasks made by a student with respect to the total number of tasks assigned to student
-factors=fulfillmentoftasks
+name=tasks
+description=Percentage of tasks made by a student with respect to the total number of tasks in the project
+factors=taskscontribution
 weights=1.0
 
 # query results
-result.closedTasksAssignee=closedTasksAssignee
-result.tasksAssigneeTotal=tasksAssigneeTotal
+result.tasksAssignee=tasksAssignee
+result.tasksTotal=tasksTotal
 
 # metric defines a formula based on execution results of parameter- and metric-queries
-metric= closedTasksAssignee / tasksAssigneeTotal
+metric= tasksAssignee / tasksTotal
 onError=set0
 
 
