--- a/QUALITY_MODELS/AMEP/factors/modified_lines_contribution.properties
+++ b/QUALITY_MODELS/AMEP/factors/modified_lines_contribution.properties
@@ -2,7 +2,7 @@
 name=Modified Lines Contribution
 description=Groups the metrics that measure the percentage of modified lines of code made by a student with respect to the total number of modified lines of code in the project. Note: Both additions and deletions are considered as modified lines.
 
-metric=modifiedlines_Student
+metric=modifiedlines
 indicators=repository_contribution
 
 formula=average
