--- a/QUALITY_MODELS/AMEP/metrics/commits.properties
+++ b/QUALITY_MODELS/AMEP/metrics/commits.properties
@@ -3,23 +3,26 @@ index=$$github.index
 
 # metric props
 enabled=true
-name=Student modified lines
-description=Percentage of modified lines of code made by a student with respect to the total number of modified lines of code in the project
-factors=modifiedlinescontribution
+name=commits
+description=Percentage of commits made by a student with respect to the total number of commits in the project
+factors=commitscontribution
 weights=1.0
 
 # query results
-result.nCommitAssignee=nCommitAssignee
-result.nCommitsTotal=nCommitsTotal
+result.commitsAssignee=commitsAssignee
+result.commitsTotal=commitsTotal
 
 # metric defines a formula based on execution results of parameter- and metric-queries
-metric= nCommitAssignee / nCommitsTotal
+metric= commitsAssignee / commitsTotal
+factors=commitscontribution
 onError=set0
 
 
 #possible related_events sent by LD_connect from GITHUB: push, issues       from TAIGA: issue, epic, task, userstory, relatedusertory
 relatedEvent=push
 scope=individual
+
+
 
 # We'll define a param for the student's username
 # placeholders get replaced at runtime:  $$studentUser
