--- a/QUALITY_MODELS/AMEP/metrics/modifiedlines.properties
+++ b/QUALITY_MODELS/AMEP/metrics/modifiedlines.properties
@@ -3,7 +3,7 @@ index=$$github.index
 
 # metric props
 enabled=true
-name=Student modified lines
+name=modified lines
 description=Percentage of modified lines of code made by a student with respect to the total number of modified lines of code in the project
 factors=modifiedlinescontribution
 weights=1.0
