--- a/QUALITY_MODELS/AMEP/metrics/totalhours_Student.properties
+++ b/QUALITY_MODELS/AMEP/metrics/totalhours_Student.properties
@@ -1,27 +1,24 @@
 # values starting with $$ are looked up in project.properties
-index=$$github.index
+index=$$sheets.index
 
 # metric props
 enabled=true
-name=Students commits
-description=Percentage of commits made by a student with respect to the total number of commits in the project
-factors=commitscontribution
+name=Student total hours
+description=Percentage of total hours worked by a student with respect to the total hours worked in the project
+factors=dedicationcontribution
 weights=1.0
 
 # query results
-result.commitsAssignee=commitsAssignee
-result.commitsTotal=commitsTotal
+result.hoursAssignee=hoursAssignee
+result.hoursTotal=hoursTotal
 
 # metric defines a formula based on execution results of parameter- and metric-queries
-metric= commitsAssignee / commitsTotal
+metric= hoursAssignee / hoursTotal
 onError=set0
 
-
 #possible related_events sent by LD_connect from GITHUB: push, issues       from TAIGA: issue, epic, task, userstory, relatedusertory
-relatedEvent=push
+relatedEvent=sheets_activity
 scope=individual
-
-
 
 # We'll define a param for the student's username
 # placeholders get replaced at runtime:  $$studentUser
