--- a/QUALITY_MODELS/DEFAULT/metrics/closedtasks.properties
+++ b/QUALITY_MODELS/DEFAULT/metrics/closedtasks.properties
@@ -3,17 +3,17 @@ index=$$taiga.task.index
 
 # metric props
 enabled=true
-name=Assigned student tasks
-description=Percentage of tasks made by a student with respect to the total number of tasks in the project
-factors=taskscontribution
+name=closed tasks
+description=Percentage of closed tasks made by a student with respect to the total number of tasks assigned to student
+factors=fulfillmentoftasks
 weights=1.0
 
 # query results
-result.tasksAssignee=tasksAssignee
-result.tasksTotal=tasksTotal
+result.closedTasksAssignee=closedTasksAssignee
+result.tasksAssigneeTotal=tasksAssigneeTotal
 
 # metric defines a formula based on execution results of parameter- and metric-queries
-metric= tasksAssignee / tasksTotal
+metric= closedTasksAssignee / tasksAssigneeTotal
 onError=set0
 
 
