--- a/QUALITY_MODELS/DEFAULT/metrics/modifiedlines.properties
+++ b/QUALITY_MODELS/DEFAULT/metrics/modifiedlines.properties
@@ -3,25 +3,23 @@ index=$$github.index
 
 # metric props
 enabled=true
-name=Students commits
-description=Percentage of commits made by a student with respect to the total number of commits in the project
-factors=commitscontribution
+name=modified lines
+description=Percentage of modified lines of code made by a student with respect to the total number of modified lines of code in the project
+factors=modifiedlinescontribution
 weights=1.0
 
 # query results
-result.commitsAssignee=commitsAssignee
-result.commitsTotal=commitsTotal
+result.nCommitAssignee=nCommitAssignee
+result.nCommitsTotal=nCommitsTotal
 
 # metric defines a formula based on execution results of parameter- and metric-queries
-metric= commitsAssignee / commitsTotal
+metric= nCommitAssignee / nCommitsTotal
 onError=set0
 
 
 #possible related_events sent by LD_connect from GITHUB: push, issues       from TAIGA: issue, epic, task, userstory, relatedusertory
 relatedEvent=push
 scope=individual
-
-
 
 # We'll define a param for the student's username
 # placeholders get replaced at runtime:  $$studentUser
