--- a/QUALITY_MODELS/DEFAULT/factors/commitscontribution.properties
+++ b/QUALITY_MODELS/DEFAULT/factors/commitscontribution.properties
@@ -3,7 +3,7 @@
 name=Commits Contribution
 description=Groups the metrics that measure the percentage of commits made by a student with respect to the total number of commits of the project. Note: Merge commits are not taken into account.
 
-metric=commits_Student
+metric=commits
 indicators=repositorycontribution
 
 formula=average
