--- a/QUALITY_MODELS/DEFAULT/factors/taskcontribution.properties
+++ b/QUALITY_MODELS/DEFAULT/factors/taskcontribution.properties
@@ -2,7 +2,7 @@
 name=Tasks Contribution
 description=Groups the metrics that measure the percentage of tasks assigned to a student with respect to the total number of tasks in the project.
 
-metric=assignedtasks_Student
+metric=assignedtasks
 indicators=backlog_management
 
 formula=average
