--- a/QUALITY_MODELS/AMEP/indicators/informationcompleteness.properties
+++ b/QUALITY_MODELS/AMEP/indicators/informationcompleteness.properties
@@ -3,7 +3,7 @@
 name=Information Completeness
 description= This strategic indicator 
 
-factor= commits_tasks_relation, task_effort_information, userstories_definition_quality
+factor= commitstasksrelation, taskeffortinformation, userstoriesdefinition_quality
 
 formula=average
 weights=1.0
