--- a/QUALITY_MODELS/AMEP/indicators/repositorycontribution.properties
+++ b/QUALITY_MODELS/AMEP/indicators/repositorycontribution.properties
@@ -3,7 +3,7 @@
 name=Repository Contribution
 description= This strategic indicator 
 
-factor= commits_contribution, commits_management, modified_lines_contribution 
+factor= commitscontribution, commitsmanagement, modifiedlinescontribution 
 
 formula=average
 weights=1.0
