--- a/QUALITY_MODELS/DEFAULT/indicators/backlogmanagement.properties
+++ b/QUALITY_MODELS/DEFAULT/indicators/backlogmanagement.properties
@@ -3,7 +3,7 @@
 name=Backlog Management
 description= This strategic indicator 
 
-factor=fullfillment_of_tasks, tasks_contribution, unassigned_tasks
+factor=fullfillmentoftasks, taskscontribution, unassignedtasks
 
 formula=average
 weights=1.0
