--- a/QUALITY_MODELS/DEFAULT/indicators/informationcompleteness.properties
+++ b/QUALITY_MODELS/DEFAULT/indicators/informationcompleteness.properties
@@ -3,7 +3,7 @@
 name=Information Completeness
 description= This strategic indicator 
 
-factor= commits_tasks_relation, task_effort_information, userstories_definition_quality
+factor= commitstasksrelation, taskeffortinformation, userstoriesdefinitionquality
 
 formula=average
 weights=1.0
