--- a/QUALITY_MODELS/AMEP/factors/unassignedtasks.properties
+++ b/QUALITY_MODELS/AMEP/factors/unassignedtasks.properties
@@ -1,6 +1,6 @@
-
 name=Unassigned Tasks
 description=Measures the percentage of tasks without assignee with respect to the total number of tasks defined in this sprint.
+category=Reversed Default
 
 metric=unassignedtasks
 indicators=backlog_management
