--- a/QUALITY_MODELS/AMEP/indicators/informationcompleteness.properties
+++ b/QUALITY_MODELS/AMEP/indicators/informationcompleteness.properties
@@ -2,11 +2,12 @@
 # metric props
 name=Information Completeness
 description= This strategic indicator 
+category=Low
 
 factor= commitstasksrelation, taskeffortinformation, userstoriesdefinition_quality
 
 formula=average
-weights=1.0
+weights=no weighted
 
 #possible related_events sent by LD_connect from GITHUB: push, issues       from TAIGA: issue, epic, task, userstory, relatedusertory
 relatedEvent=userstory
