--- a/QUALITY_MODELS/AMEP/indicators/repositorycontribution.properties
+++ b/QUALITY_MODELS/AMEP/indicators/repositorycontribution.properties
@@ -2,11 +2,12 @@
 # metric props
 name=Repository Contribution
 description= This strategic indicator 
+category=Low
 
 factor= commitscontribution, commitsmanagement, modifiedlinescontribution 
 
 formula=average
-weights=1.0
+weights=no weighted
 
 #possible related_events sent by LD_connect from GITHUB: push, issues       from TAIGA: issue, epic, task, userstory, relatedusertory
 relatedEvent=push
