--- a/QUALITY_MODELS/AMEP/factors/fullfillmentoftasks.properties
+++ b/QUALITY_MODELS/AMEP/factors/fullfillmentoftasks.properties
@@ -1,7 +1,6 @@
 name=Fulfillment of Tasks
 description=Groups the metrics that measure the percentage of closed tasks made by a student with respect to the total number of tasks assigned to this student.
-
-#metric=closed_tasks_student
+category=Default
 
 metric=closedtasks
 indicators=backlog_management
