--- a/QUALITY_MODELS/AMEP/indicators/backlogmanagement.properties
+++ b/QUALITY_MODELS/AMEP/indicators/backlogmanagement.properties
@@ -2,11 +2,12 @@
 # metric props
 name=Backlog Management
 description= This strategic indicator 
+category=Neutral
 
 factor=fullfillmentoftasks, taskscontribution, unassignedtasks
 
 formula=average
-weights=1.0
+weights=no weighted
 
 #possible related_events sent by LD_connect from GITHUB: push, issues       from TAIGA: issue, epic, task, userstory, relatedusertory
 relatedEvent=task
