--- a/QUALITY_MODELS/DEFAULT/factors/commitsmanagement.properties
+++ b/QUALITY_MODELS/DEFAULT/factors/commitsmanagement.properties
@@ -1,7 +1,6 @@
-
-# metric props
 name=Commits Management
 description=Groups the metrics that measure the percentage of anonymous commits, i.e. commits from unknown users which dont match with any known contributor.
+category=Reversed Default
 
 metric=None
 indicators=repositorycontribution
