--- a/QUALITY_MODELS/DEFAULT/factors/taskeffortinformation.properties
+++ b/QUALITY_MODELS/DEFAULT/factors/taskeffortinformation.properties
@@ -1,9 +1,8 @@
-
-# metric props
 name=Tasks Effort Information
 description=Groups the metrics that measure tasks effort information, both estimated and actual effort to raise awareness of the importance of accuracy in estimating the time spent on different sprint tasks.
+category=Default
 
-metric=closed_tasks_with_AE
+metric=closed_tasks_with_AE,task_with_EE
 indicators=information_completeness
 
 
