--- a/QUALITY_MODELS/DEFAULT/factors/userstoriesdefinition_quality.properties
+++ b/QUALITY_MODELS/DEFAULT/factors/userstoriesdefinition_quality.properties
@@ -1,5 +1,6 @@
 name=User Stories Definition Quality
 description=Groups the metrics that measure the quality of user stories through the definition of acceptance criteria and the use of the specific pattern.
+category=Default
 
 metric=pattern_check
 indicators=information_completeness
