--- a/QUALITY_MODELS/AMEP/factors/commitsmanagement.properties
+++ b/QUALITY_MODELS/AMEP/factors/commitsmanagement.properties
@@ -2,7 +2,7 @@ name=Commits Management
 description=Groups the metrics that measure the percentage of anonymous commits, i.e. commits from unknown users which dont match with any known contributor.
 category=Reversed Default
 
-metric=None
+metric=commits_anonymous
 indicators=repositorycontribution
 
 formula=average
